// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Media Player: Placeholder should render a video placeholder 1`] = `
.c8 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c2 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c2:hover,
.c2:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c5 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c7 {
  display: block;
  margin-top: 0.5rem;
}

.c1 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  bottom: 0;
}

.c0:hover .c3,
.c0:focus .c3 {
  background-color: #B80000;
}

<div
  class="c0 c1"
>
  <button
    class="c2 c3"
  >
    <span
      class="c4"
    >
      Play video, "Dog chases cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="c5"
    >
      <svg
        class="c6"
        focusable="false"
        height="12px"
        viewBox="0 0 32 32"
        width="12px"
      >
        <polygon
          points="3,32 29,16 3,0"
        />
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="c7"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
  <img
    alt="Image Alt"
    class="c8"
    src="http://foo.bar/placeholder.png"
  />
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder with guidance 1`] = `
.c14 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c12 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 1rem;
  height: 1rem;
}

.c10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c8 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c8:hover,
.c8:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c11 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c13 {
  display: block;
  margin-top: 0.5rem;
}

.c2 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
}

.c3 {
  width: 100%;
  height: 100%;
  position: absolute;
  background-color: rgba(34,34,34,0.75);
  color: #FFFFFF;
  padding: 0.5rem;
  border: none;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 1.5rem;
  padding: 1rem 0.5rem;
}

.c7 {
  padding: 0 0 0 0.5rem;
  font-weight: normal;
}

.c5 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c9 {
  position: absolute;
  bottom: 0;
}

.c0:hover .c9,
.c0:focus .c9 {
  background-color: #B80000;
}

@media (min-width:37.5rem) {
  .c2 {
    font-size: 0.875rem;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2"
  >
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          aria-hidden="true"
          class="c5"
        >
          <svg
            class="c6"
            focusable="false"
            height="32"
            viewBox="0 0 32 32"
            width="32"
          >
            <path
              d="M32,16A16,16,0,1,1,16,0,16,16,0,0,1,32,16Zm-8.6-.8H16.6v3.1h2.9c-.2,1.5-1.6,2.4-3.7,2.4s-3.7-2.4-3.7-4.7,1-4.7,3.7-4.7,3,.8,3.2,2.2h4.2c-.4-4-3.9-5.8-7.2-5.8-4.8,0-8,3.7-8,8.3s3.1,8.3,8,8.3a5.4,5.4,0,0,0,4.5-2.1l.2,1.7h2.7Z"
            />
          </svg>
        </div>
        <strong
          class="c7"
        >
          Guidance: May contain strong language, sexual or violent content that may offend.
        </strong>
      </div>
    </div>
  </div>
  <button
    class="c8 c9"
  >
    <span
      class="c10"
    >
      Play video, "Dog chases cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="c11"
    >
      <svg
        class="c12"
        focusable="false"
        height="12px"
        viewBox="0 0 32 32"
        width="12px"
      >
        <polygon
          points="3,32 29,16 3,0"
        />
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="c13"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
  <img
    alt="Image Alt"
    class="c14"
    src="http://foo.bar/placeholder.png"
  />
</div>
`;

exports[`Media Player: Placeholder should render a video placeholder without duration 1`] = `
.c7 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.75rem;
  height: 0.75rem;
}

.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c2 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c2:hover,
.c2:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c5 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  bottom: 0;
}

.c0:hover .c3,
.c0:focus .c3 {
  background-color: #B80000;
}

<div
  class="c0 c1"
>
  <button
    class="c2 c3"
  >
    <span
      class="c4"
    >
      Play video, "Dog chases cat."
    </span>
    <div
      aria-hidden="true"
      class="c5"
    >
      <svg
        class="c6"
        focusable="false"
        height="12px"
        viewBox="0 0 32 32"
        width="12px"
      >
        <polygon
          points="3,32 29,16 3,0"
        />
      </svg>
    </div>
  </button>
  <img
    alt="Image Alt"
    class="c7"
    src="http://foo.bar/placeholder.png"
  />
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder 1`] = `
.c8 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c2 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c2:hover,
.c2:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c5 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  margin-top: 0.5rem;
  width: 1.5rem;
}

.c7 {
  display: block;
  margin-top: 0.5rem;
}

.c1 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  bottom: 0;
}

.c0:hover .c3,
.c0:focus .c3 {
  background-color: #B80000;
}

<div
  class="c0 c1"
>
  <button
    class="c2 c3"
  >
    <span
      class="c4"
    >
      Play audio, "Dog barks at cat.", 2 minutes 30 seconds
    </span>
    <div
      aria-hidden="true"
      class="c5"
    >
      <svg
        class="c6"
        focusable="false"
        height="12px"
        viewBox="0 0 13 12"
        width="13px"
      >
        <path
          d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
        />
        <path
          d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
        />
      </svg>
    </div>
    <time
      aria-hidden="true"
      class="c7"
      datetime="PT2M30S"
    >
      2:30
    </time>
  </button>
  <img
    alt="Image Alt"
    class="c8"
    src="http://foo.bar/placeholder.png"
  />
</div>
`;

exports[`Media Player: Placeholder should render an audio placeholder without duration 1`] = `
.c7 {
  display: block;
  width: 100%;
  visibility: visible;
}

.c6 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c4 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c2 {
  background-color: #222222;
  border: none;
  color: #FFFFFF;
  cursor: pointer;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  height: 5rem;
  padding: 0;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
  width: 5rem;
}

.c2:hover,
.c2:focus {
  background-color: #B80000;
  -webkit-transition: background-color 300ms;
  transition: background-color 300ms;
}

.c5 > svg {
  color: #FFFFFF;
  fill: currentColor;
  height: 1.5rem;
  width: 1.5rem;
}

.c1 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.c3 {
  position: absolute;
  bottom: 0;
}

.c0:hover .c3,
.c0:focus .c3 {
  background-color: #B80000;
}

<div
  class="c0 c1"
>
  <button
    class="c2 c3"
  >
    <span
      class="c4"
    >
      Play audio, "Dog barks at cat."
    </span>
    <div
      aria-hidden="true"
      class="c5"
    >
      <svg
        class="c6"
        focusable="false"
        height="12px"
        viewBox="0 0 13 12"
        width="13px"
      >
        <path
          d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
        />
        <path
          d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
        />
      </svg>
    </div>
  </button>
  <img
    alt="Image Alt"
    class="c7"
    src="http://foo.bar/placeholder.png"
  />
</div>
`;
